@@ -1,13 +1,0 @@
-<?php
-/** Eastern Yiddish (מיזרח־ייִדיש)
- *
- * See MessagesQqq.php for message documentation incl. usage of parameters
- * To improve a translation please visit http://translatewiki.net
- *
- * @ingroup Language
- * @file
- *
- */
-
-$rtl = true;
-$fallback = 'yi';
